# lumina

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  sonar-project.properties
.github/workflows/: ci.yml  release.yml  sonarqube.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  cli.rs  clipboard.rs  commands.rs  completion.rs  config.rs  editor.rs  files.rs  find.rs  git.rs  input.rs  keymap.rs  lsp.rs  main.rs  picker.rs  search.rs  session.rs  settings.rs  sync.rs  terminal.rs  theme.rs  ui.rs  vim.rs  worker.rs
crates/app/src/app/: completion.rs  context_menu.rs  cursors.rs  diagnostics.rs  dispatch.rs  dock.rs  file_ops.rs  find.rs  git.rs  keys.rs  lifecycle.rs  lsp.rs  mouse.rs  overlay.rs  palette.rs  panel.rs  run_loop.rs  search_ui.rs  settings.rs  vim.rs  workers.rs
crates/app/src/app/lsp/: convert.rs  events.rs  requests.rs
crates/app/src/app/tests/: context_menu.rs  dock.rs  editing.rs  explorer.rs  files.rs  find_search.rs  idle_frames.rs  lsp.rs  mod.rs  mouse.rs  palette_theme.rs  plugins.rs  render.rs  render_overlays.rs  settings.rs  sync.rs  terminal.rs  vim.rs  vscode_shortcuts.rs
crates/app/src/app/tests/lsp/: completion.rs  features.rs  lifecycle.rs  nav.rs
crates/app/src/app/tests/vim/: ex.rs  motions.rs  operators.rs  registers.rs  visual.rs
crates/app/src/commands/: tables.rs
crates/app/src/editor/: host.rs
crates/app/src/lsp/: diagnostics.rs  documents.rs  lifecycle.rs  progress.rs  registry.rs  requests.rs  response.rs  server_msgs.rs  status.rs  tests.rs  watchers.rs
crates/app/src/lsp/tests/: features.rs  lifecycle.rs  response.rs  server_msgs.rs
crates/app/src/terminal/: keys.rs  panel.rs  session.rs
crates/app/src/ui/: chrome.rs  editor.rs  editor_cell.rs  overlays.rs  panel.rs  pickers.rs  settings.rs  sidebar.rs  util.rs
crates/builtins/: Cargo.toml
crates/builtins/src/: clipboard.rs  code_action.rs  code_lens.rs  completion.rs  diagnostics.rs  document_highlight.rs  explorer.rs  find.rs  folding.rs  git_nav.rs  hover.rs  inlay_hints.rs  lib.rs  lsp.rs  lsp_nav.rs  multicursor.rs  palette.rs  project_search.rs  rename.rs  semantic_tokens.rs  signature_help.rs  snippet.rs  terminal.rs  theme.rs  vim.rs
crates/builtins/src/completion/: state.rs
crates/builtins/src/explorer/: logic.rs  model.rs
crates/builtins/src/find/: state.rs
crates/builtins/src/vim/: edit.rs  exline.rs  motion.rs  normal.rs  operators.rs  registers.rs  search.rs  state.rs  visual.rs
crates/builtins/tests/: self_hosting.rs
crates/core/: Cargo.toml
crates/core/src/: document.rs  edit.rs  history.rs  lib.rs  motion.rs  pairs.rs  selection.rs  transaction.rs  view.rs  vim.rs  workspace.rs  wrap.rs
crates/core/src/document/: mutate.rs  tests.rs  types.rs
crates/core/src/edit/: apply.rs  helpers.rs  hygiene.rs  insert.rs  linewise.rs  select.rs  smart.rs  undo.rs
crates/core/src/edit/tests/: basic.rs  hygiene.rs  indent.rs  linewise.rs  mod.rs  pairs.rs
crates/core/src/motion/: bracket.rs  char_motion.rs  tests.rs  word.rs
crates/core/src/view/: tests.rs
crates/core/src/vim/: object.rs  tests.rs
crates/core/tests/: coordinate_mapping.rs  selection_invariants.rs  transaction_roundtrip.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  lib.rs  position.rs  transport.rs
crates/lsp/src/client/: handshake.rs  parse.rs  requests.rs  tests.rs
crates/lsp/src/client/parse/: capabilities.rs  decorations.rs  diagnostics.rs  edits.rs  navigation.rs  shared.rs
crates/lsp/tests/: transcript.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: contribution.rs  decoration.rs  event.rs  host.rs  input.rs  lib.rs  lsp.rs  overlay.rs  picker.rs  registry.rs  runtime.rs  terminal.rs  vim.rs  wasm.rs
crates/plugin/src/runtime/: actions.rs  dispatch.rs  manifest.rs
crates/plugin/src/wasm/: engine.rs  tests.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: highlighter.rs  lang.rs  lib.rs  rope_provider.rs  tests.rs
docs/: ARCHITECTURE.md  AUDIT.md  PLUGIN_MIGRATION.md  README.md
docs/superpowers/plans/: 2026-07-13-lsp-pr1-handshake-capabilities.md
docs/superpowers/specs/: 2026-07-13-lsp-pr1-handshake-capabilities-design.md  2026-07-13-lsp-pr2-server-requests-design.md  2026-07-13-lsp-pr3-lifecycle-design.md  2026-07-13-lsp-pr4-cancellation-staleness-design.md  2026-07-13-lsp-pr5-formatting-design.md  2026-07-14-zero-config-lsp-design.md  2026-07-15-context-menu-design.md  2026-07-21-line-wrap-design.md
plugins/inspector/: main.rhai  plugin.toml
plugins/shout/: main.rhai  plugin.toml
plugins/todo/: main.rhai  plugin.toml
plugins/wasm-hello/: main.wasm  main.wat  plugin.toml
