[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/syntax",
    "crates/lsp",
    "crates/plugin",
    "crates/builtins",
    "crates/app",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

# Distributed binaries: strip symbols to keep the download small. LTO is left off
# so release CI stays fast; flip it on here if binary size matters more than build time.
[profile.release]
strip = "symbols"

# Lint policy, centralized (docs/ARCHITECTURE.md §12). Members opt in with
# `lints.workspace = true`, so this is the single source of truth — it replaces the
# per-crate `#![forbid(unsafe_code)]` attributes. `clippy::all` is promoted to a hard
# error by CI's `-D warnings`.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
# core
ropey = "1.6"
unicode-width = "0.2"
unicode-segmentation = "1.11"
slotmap = "1.0"
# terminal / ui
crossterm = "0.28"
ratatui = "0.29"
portable-pty = "0.9"
# vt100 0.15.x depends on unicode-width 0.1, which coexists with ratatui 0.29's pinned
# unicode-width 0.2 (0.16.x would force a 0.2.1+ bump that ratatui's `=0.2.0` forbids).
vt100 = "0.15"
# search / fs
regex = "1.10"
ignore = "0.4"
globset = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
notify = "6.1"
notify-debouncer-full = "0.3"
# syntax
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.24"
tree-sitter-go = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
streaming-iterator = "0.1"
# util
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.97"
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
arboard = { version = "3.4", default-features = false }
imara-diff = "0.1"
rhai = "1.19"
wasmi = "1.1"
wat = "1.0"
# internal
editor-core = { path = "crates/core" }
editor-syntax = { path = "crates/syntax" }
editor-plugin = { path = "crates/plugin" }
editor-builtins = { path = "crates/builtins" }
# dev
proptest = "1.5"
