[package]
name = "editor-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lumina"
path = "src/main.rs"

[dependencies]
editor-core = { path = "../core" }
editor-syntax = { path = "../syntax" }
editor-plugin = { path = "../plugin" }
editor-builtins = { path = "../builtins" }
crossterm.workspace = true
ratatui.workspace = true
anyhow.workspace = true
unicode-width.workspace = true
