[package]
name = "editor-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lmn"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
editor-core = { path = "../core" }
editor-syntax = { path = "../syntax" }
editor-lsp = { path = "../lsp" }
editor-plugin = { path = "../plugin" }
editor-builtins = { path = "../builtins" }
crossterm.workspace = true
ratatui.workspace = true
portable-pty.workspace = true
vt100.workspace = true
anyhow.workspace = true
unicode-width.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
regex.workspace = true
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
imara-diff.workspace = true
arboard.workspace = true
