[package]
name = "lumina"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lmn"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Compiles the ignored release-timing harnesses (perf A/B measurements). Off by default so the
# coverage build never sees this deliberately-unexecuted code. Run with:
#   cargo test -p lumina --features perfbench --release -- --ignored --nocapture
perfbench = []

[dependencies]
editor-core = { path = "../core" }
editor-syntax = { path = "../syntax" }
editor-lsp = { path = "../lsp" }
editor-plugin = { path = "../plugin" }
editor-builtins = { path = "../builtins" }
crossterm.workspace = true
ratatui.workspace = true
portable-pty.workspace = true
vt100.workspace = true
anyhow.workspace = true
unicode-width.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
regex.workspace = true
ignore.workspace = true
globset.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
imara-diff.workspace = true
arboard.workspace = true
