[package]
name = "editor-builtins"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_builtins"

[lints]
workspace = true

[features]
proptests = []

[dependencies]
editor-core = { path = "../core" }
editor-plugin = { path = "../plugin" }
ignore.workspace = true
regex.workspace = true
