[package]
name = "editor-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_builtins"

[lints]
workspace = true

[features]
proptests = []

[dependencies]
editor-core = { path = "../core" }
editor-plugin = { path = "../plugin" }
ignore.workspace = true
regex.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
