[package]
name = "editor-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_builtins"

[lints]
workspace = true

[features]
proptests = []
# Compiles the ignored release-timing harnesses (perf A/B measurements). Off by default so the
# coverage build never sees this deliberately-unexecuted code.
perfbench = []

[dependencies]
editor-core = { path = "../core" }
editor-plugin = { path = "../plugin" }
ignore.workspace = true
regex.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
