[package]
name = "editor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_core"

[lints]
workspace = true

[features]
proptests = []

[dependencies]
ropey.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
slotmap.workspace = true

[dev-dependencies]
proptest.workspace = true
