[package]
name = "editor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_core"

[lints]
workspace = true

[features]
proptests = []
# Compiles the ignored release-timing harnesses (perf A/B measurements). Off by default so the
# coverage build never sees this deliberately-unexecuted code. Run with:
#   cargo test -p editor-core --features perfbench --release -- --ignored --nocapture
perfbench = []

[dependencies]
ropey.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
slotmap.workspace = true

[dev-dependencies]
proptest.workspace = true
