[package]
name = "editor-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_lsp"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
