[package]
name = "editor-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_plugin"

[lints]
workspace = true

[features]
proptests = []

[dependencies]
editor-core = { path = "../core" }
rhai = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmi = { workspace = true }
wat = { workspace = true }
