[package]
name = "editor-syntax"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_syntax"

[dependencies]
editor-core = { path = "../core" }
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-json.workspace = true
streaming-iterator.workspace = true
