[package]
name = "editor-syntax"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "editor_syntax"

[lints]
workspace = true

[dependencies]
editor-core = { path = "../core" }
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-json.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-c.workspace = true
tree-sitter-go.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-md.workspace = true
streaming-iterator.workspace = true
